# ComplianceAI

./: .env  .env.example  .env.simplified.example  .port_assignments  AgenticAI.md  README.md  RegReporting.md  Revamp.md  SCRIPTS_README.md  STARTUP_GUIDE.md  Spec.md  TODO3456.md  action_list.md  check-kyc-status-simple.sh  check-kyc-status.sh  docker-compose-simplified.yml  docker-compose.yml  phase6_test_report_1756800438.json  revamp.sh  schema.sql  start-kyc-platform.sh  start-kyc-simple.sh  stop-kyc-platform.sh  test_infrastructure.py  test_system.py
.cursor/rules/: rules.mdc
.github/workflows/: regulatory-tests.yml
configs/: client_override.yaml  default.yaml
configs/deployment/: README.md  docker-compose.prod.yml  kubernetes-prod.yml  production.env  staging.env
configs/jurisdictions/: README.md  base_jurisdiction.yaml  eu_jurisdiction.yaml  uk_jurisdiction.yaml  us_jurisdiction.yaml
configs/kafka/: README.md
configs/monitoring/: README.md  alert_rules.yml  alertmanager.yml  prometheus.yml
database/: init.sql  mongo-init.js
database/migrations/: README.md
docs/api/: decision_orchestration_api.html  intelligence_compliance_api.html  regulatory_intelligence_api.html
docs/architecture/: regulatory_architecture.html  system_overview.html
docs/guides/: data_migration_guide.html  deployment_guide.html  jurisdiction_configuration_guide.html  monitoring_guide.html
docs/integration/: regulatory_integration_guide.html  third_party_integration.html
kafka/: regulatory_topics.json
monitoring/: prometheus.yml
python-agents/: memory_manager.py
python-web-interface/: Dockerfile  phase3_api.py  phase4_api.py  phase6_api.py  requirements.txt  web_interface_service.py
python-web-ui/: Dockerfile  main.py  requirements.txt
python-web-ui/static/: app.js  (+1 more)
rust-core/: Cargo.toml  Dockerfile
rust-core/migrations/: 001_initial.sql
rust-core/src/: agents.rs  config.rs  database.rs  main.rs  messaging.rs  orchestrator.rs  performance.rs  security.rs  storage.rs  websocket.rs
rust-core/src/ui/static/: agentic_app.js  agentic_style.css  app.js  style.css
rust-core/src/ui/templates/: agentic_dashboard.html  client_pilot_dashboard.html  index.html  processing.html  result.html  result_debug.html  userguide.html
scripts/: automated_tests.py  deploy.sh  generate_comprehensive_test_report.py  package-lock.json  package.json  performance_optimization.py  port_manager.py  screenshots.js  setup_regulatory_kafka.py  verify_deployment.sh  wait_for_services.py
test-uploads/: test-id.txt  test-selfie.txt
tests/: phase3_automated_tests.py  phase4_automated_tests.py  phase6_automated_tests.py  run_openapi_smoke.py  test_runner.py
(+163 files in other folders)
