[package]
name = "kyc-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.0", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Kafka messaging
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTTP client for agent communication
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Template engine
tera = "1.19"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Pinecone client (using HTTP client)
# We'll implement our own wrapper since there's no official Rust client

# Environment variables
dotenv = "0.15"

# File handling
tempfile = "3.8"
